--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
     <h1><b>Mission Green Barak </b></h1>
     </div>
     <div class="nav_items">
-      <a href="index.html.html">HOME</a>
+      <a href="index.html">HOME</a>
   </div>
   </nav>
   <div class="content">
