--- a/donation.html
+++ b/donation.html
@@ -14,7 +14,7 @@
     <h1><b>Mission Green Barak</b></h1>
     </div>
     <div class="nav_items">
-      <a href="index.html.html">Home</a>
+      <a href="index.html">Home</a>
   </div>
   </nav>
 <br>
