--- a/env knowledge.html
+++ b/env knowledge.html
@@ -11,7 +11,7 @@
     <h1><b>Mission Green Barak</b></h1>
     </div>
     <div class="nav_items">
-      <a href="index.html.html">Home</a>
+      <a href="index.html">Home</a>
   </div>
   </nav>
     </div>
