--- a/feedback.html
+++ b/feedback.html
@@ -12,7 +12,7 @@
     <h1><b>Mission Green Barak </b></h1>
     </div>
     <div class="nav_items">
-      <a href="index.html.html">Home</a>
+      <a href="index.html">Home</a>
   </div>
   </nav>
 <br><br><br><br>
