d.thank you.html

--- a/d.thank you.html
+++ b/d.thank you.html
@@ -12,7 +12,7 @@
     <p>We greatly appreciate your generous contribution.</p>
     <p>Your donation will make a difference in the lives of many.</p>
     <p>Confirmation Number: <strong>#123456789</strong></p>
-    <a href="A home.html" class="btn">Back to Home</a>
+    <a href="index.html" class="btn">Back to Home</a>
   </div>
 </body>
 </html>
